[gd_scene load_steps=10 format=3 uid="uid://bgcjrf1owoqpk"]

[ext_resource type="Script" path="res://Scripts/button_game.gd" id="1_afibx"]
[ext_resource type="Texture2D" uid="uid://bwwdhjotejxop" path="res://Assets/Rocky Roads/Objects/button_blue.png" id="2_mlgwv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fj5y7"]
size = Vector2(10, 4)

[sub_resource type="Animation" id="Animation_2p2ib"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_7jl5n"]
resource_name = "Restart"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_1oegn"]
resource_name = "Un_pressed"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_bmb55"]
resource_name = "pressed"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nfm00"]
_data = {
"RESET": SubResource("Animation_2p2ib"),
"Restart": SubResource("Animation_7jl5n"),
"Un_pressed": SubResource("Animation_1oegn"),
"pressed": SubResource("Animation_bmb55")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_168it"]
size = Vector2(14, 3)

[node name="ButtonBlue" type="Node2D"]
script = ExtResource("1_afibx")
Button_type = 1

[node name="TimerRestart" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_fj5y7")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -4)
texture = ExtResource("2_mlgwv")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nfm00")
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 7
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_168it")
debug_color = Color(0.596538, 0.000272613, 0.600101, 0.42)

[connection signal="timeout" from="TimerRestart" to="." method="_on_timer_restart_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
